Use K&R style for curly braces in remaining files
Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/docs/internals/command.html.in
+++ b/docs/internals/command.html.in
@@ -560,7 +560,8 @@
 <pre>
 int runhook(const char *drvstr, const char *id,
             const char *opstr, const char *subopstr,
-            const char *extra) {
+            const char *extra)
+{
   int ret;
   char *path;
   virCommandPtr cmd;
