bhyve: create capabilities submodule
- Move all capabilities functions to separate file
- Add initCPU

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -778,6 +778,8 @@ PARALLELS_DRIVER_SOURCES =					\
 		parallels/parallels_network.c
 
 BHYVE_DRIVER_SOURCES =						\
+		bhyve/bhyve_capabilities.c			\
+		bhyve/bhyve_capabilities.h			\
 		bhyve/bhyve_command.c				\
 		bhyve/bhyve_command.h				\
 		bhyve/bhyve_driver.h				\
