--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2587,8 +2587,10 @@ virt_aa_helper_LDFLAGS = \
 		$(PIE_LDFLAGS) \
 		$(NULL)
 virt_aa_helper_LDADD =						\
+		libvirt.la					\
 		libvirt_conf.la					\
 		libvirt_util.la					\
+		libvirt_driver_storage_impl.la			\
 		../gnulib/lib/libgnu.la
 if WITH_DTRACE_PROBES
 virt_aa_helper_LDADD += libvirt_probes.lo
